--- a/TEST1.html
+++ b/TEST1.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8">
       <title>CSS TEST</title>
         <style>
-
+			.title{color:black;text-align:center;}
+			
+			input[type=text]{background:red;}
+			input[type=password]{background:blue;}
+			
+			img[scr$=png] {border:3px solid red;}
+			img[scr$=jpg] {border:3px solid green;}
+			img[scr$=gif] {border:3px solid blue;}
 			
         </style>
   </head>
