--- a/TEST1.html
+++ b/TEST1.html
@@ -9,9 +9,9 @@
 			input[type=text]{background:red;}
 			input[type=password]{background:blue;}
 			
-			img[scr$=png] {border:3px solid red;}
-			img[scr$=jpg] {border:3px solid green;}
-			img[scr$=gif] {border:3px solid blue;}
+			img[src$=png] {border:3px solid red;}
+			img[src$=jpg] {border:3px solid green;}
+			img[src$=gif] {border:3px solid blue;}
 			
         </style>
   </head>
@@ -27,9 +27,9 @@
 	<hr>
 	<h1 class="title">css문자열 송성 선택자</h1>
 	<hr>
-	<img scr="coding.png" width="200" height="250">
-	<img scr="coding.jpg" width="200" height="250">
-	<img scr="coding.gif" width="200" height="250">
+	<img src="coding.png" width="200" height="250">
+	<img src="coding.jpg" width="200" height="250">
+	<img src="coding.gif" width="200" height="250">
 	<hr>
 	<h1 class="title">css 후손 선택자</h1>
 	<div id="header">
